--- a/petter.html
+++ b/petter.html
@@ -254,7 +254,7 @@
 			</div>
 		</nav>
 		<div>
-			<img src="skogpetterlow.jpg">
+			<img src="petter.jpg">
 		</div>
 	</header>
 	<div id="content">
