--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 				I'm a pianist, composer, youtuber, beatboxer and person.
 			</p>
 			<p>
-				I grew up by a Swedish lake, and the piano got its hooks into me when I was 14, 
+				I grew up by a lake in eastern Sweden. The piano got its hooks into me when I was 14, 
 				and that's when I started playing jazz. Ever since then, 
 				all I've has been doing is playing the piano, 
 				writing piano music, improvising on the piano, teaching the piano, 
