--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 					
 					<div>I turn 30</div>
 					<div>Oct 17th</div>
-					<div></div>
+					<div>Happy Birthday!</div>
 					<div></div>
 					
 					<div>Bazar Klub</div>
