--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 					
 					<div>Petter Jazz</div>
 					<div>March 2nd 7PM</div>
-					<div>Mandagsklubben 5E, Copenhagen</div>
+					<div>Mandagsklubben 5E, CPH</div>
 					<div></div>
 					
 					<div>House Concert</div>
