--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 					<div class="imgwrap">
 						<img src="afterthemeltdown.jpg">
 						<div class="imgdescription">
-							<h2>After the Meltdown</h2>
+							<h2></h2>
 						</div>
 					</div>
 				</a>
@@ -292,7 +292,7 @@
 					<div class="imgwrap">
 						<img src="inthecold.jpg">
 						<div class="imgdescription">
-							<h2 style="color: black;">In the Cold</h2>
+							<h2>In the Cold</h2>
 						</div>
 					</div>
 				</a>
@@ -348,7 +348,7 @@
 					
 					<div>House Concert</div>
 					<div>March 5th 7PM</div>
-					<div>Norrköping</div>
+					<div>Eklidsgatan 17, Nkpg</div>
 					<div></div>
 				
 					<div>Rabbit Hole</div>
