--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 		<div id="albums">
 			<h1>albums</h1>
 			<div>	
-				<a class="albumart" href="">
+				<a class="albumart" href="https://album.link/hjX5cKnZmmSJ8">
 					<div class="imgwrap">
 						<img src="afterthemeltdown.jpg">
 						<div class="imgdescription">
