--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 		<div id="albums">
 			<h1>albums</h1>
 			<div>
-				<a class="albumart" href="https://songwhip.com/petterrylen/the-bended-tree">
+				<a class="albumart" href="/thecrocodilesarecoming/">
 					<div class="imgwrap">
-						<img src="/images/crocodiles.jpg">
+						<img src="/thecrocodilesarecoming/cover.webp">
 						<div class="imgdescription">
-							<h2 class="black">The Crocodiles Are Coming</h2>
+							<h2 class="">The Crocodiles Are Coming</h2>
 						</div>
 					</div>
 				</a>
-				<a class="albumart" href="https://songwhip.com/petterrylen/the-bended-tree">
+				<a class="albumart" href="/">
 					<div class="imgwrap">
-						<img src="/images/badjokeep.jpg">
+						<img src="/images/badjokeep.webp">
 						<div class="imgdescription">
-							<h2 class="black">Bad Joke EP</h2>
+							<h2 class="">Bad Joke EP</h2>
 						</div>
 					</div>
 				</a>
