--- a/konsert/index.html
+++ b/konsert/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Petter Rylén på Vintervikens Trädgårdskafé!</title>
+	<title>Petter Rylén – konsert</title>
 	<meta charset="utf-8">
-	<link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@200;300;400;500;700;900&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@200;300;400;500;700;900&display=swap"
+		rel="stylesheet">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179534280-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-	  gtag('config', 'UA-179534280-1');
+		gtag('config', 'UA-179534280-1');
 	</script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	    
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+	    
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		body {
@@ -60,7 +65,7 @@
 			text-align: left;
 			line-height: 1.35em;
 		}
-		
+
 		h2 {
 			font-size: 80px;
 			font-family: "Josefin Sans", sans-serif;
@@ -80,7 +85,7 @@
 		.smaller {
 			font-size: 30px;
 		}
-		
+
 		div {
 			box-sizing: border-box;
 		}
@@ -95,13 +100,13 @@
 
 		.video {
 			width: 100%;
-    		height: 100%;
-  	 		 position: absolute;
-  			  top: 0;
-  			  left: 0; 
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
 			margin: 0 auto;
 		}
-		
+
 		header {
 			position: relative;
 			box-sizing: border-box;
@@ -135,36 +140,36 @@
 		}
 
 		@media screen and (max-width: 665px) {
-		
-		body {
-			width: 85vw;
-		}
 
-		h1 {
+			body {
+				width: 85vw;
+			}
+
+			h1 {
 				font-size: 33px;
 			}
 
-		.smaller {
-			font-size: 23px;
-		}
+			.smaller {
+				font-size: 23px;
+			}
 
-		h2 {
-			font-size: 50px;
-			line-height: 1.20em;
-		}
+			h2 {
+				font-size: 50px;
+				line-height: 1.20em;
+			}
 
-		h3 {
-			font-size: 30px;
-		}
+			h3 {
+				font-size: 30px;
+			}
 
-		.text {
-		max-width: 80vw
-	}
+			.text {
+				max-width: 80vw
+			}
 
-	.linkgrid {
-		grid-template-columns: 70px 200px;
-		font-size: 23px;
-	}
+			.linkgrid {
+				grid-template-columns: 70px 200px;
+				font-size: 23px;
+			}
 
 
 
@@ -172,60 +177,59 @@
 		}
 	</style>
 </head>
+
 <body>
 	<header>
-			<div>
-					<h1>Konsert <span class="smaller">med</span>
-						<br>
-						Petter Rylén <span class="smaller">på</span> 
-						<br>
-						Vintervikens Trädgårdskafé!</h1>
-			</div>
+		<h1>hej</h1>
 	</header>
 	<div>
 
-<img src="/images/pettertriangle.png">
+		<img src="/images/pettertriangle.png">
 
-<b>
-<h2>
-24 april 18:00 
-</h2>
 
-<h3>Swisha 80 kr per&nbsp;biljett till <br><span style="font-weight: 700;">123 307 28 08 </span>för att&nbsp;boka&nbsp;plats. </h3>
+		<div class="text">
+			Det dunkar i bröstet. Externa krafter. Musik från monitorerna omkring mig.
+			<br><br>
+		</div>
 
-</b>
-<div class="text">
-<i>Petter Rylén, jazzpianist och låtskrivare, fortsätter att sjunga in Trädgårdskaféets nya orangeri med andra delen av vårens konsertserie.
-<br><br>
-En utforskande kväll med fokus på vackra melodier och texter om längta och leva. </i> 
-<br><br>
-</div>
-<br>
-<br>
-<div id="links">
-<a href="http://instagram.com/petterrylen">
-	<div class="linkgrid">
-		<img src="/images/ig.png">
-		petterrylen
-	</div>
-</a>
-<a href="https://songwhip.com/petterrylen/the-bended-tree">
-	<div class="linkgrid">
-		<img src="/images/apple.png">
-		<p style="margin: 5px 0px 0px 0px;">My music</p>
-	</div>
-</a>
-</div>
-<div style="position: relative;
+		<b>
+			<h2>
+				10 januari 19.30
+			</h2>
+
+			<h3></h3>
+
+		</b>
+		<br>
+		<br>
+		<div id="links">
+			<a href="http://instagram.com/petterrylen">
+				<div class="linkgrid">
+					<img src="/images/ig.png">
+					petterrylen
+				</div>
+			</a>
+			<a href="https://songwhip.com/petterrylen/the-bended-tree">
+				<div class="linkgrid">
+					<img src="/images/apple.png">
+					<p style="margin: 5px 0px 0px 0px;">Min musik</p>
+				</div>
+			</a>
+		</div>
+		<div style="position: relative;
 padding-bottom: 56.25%;
 overflow: hidden;">
-<iframe width="560" height="315" class="video" src="https://www.youtube.com/embed/owJsSB8viPk?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-</div>
+			<iframe width="560" height="315" class="video" src="https://www.youtube.com/embed/owJsSB8viPk?controls=0"
+				title="YouTube video player" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+	</div>
 </body>
+
 </html>
