--- a/konsert/index.html
+++ b/konsert/index.html
@@ -237,7 +237,8 @@
                     plats).
                 </p>
                 <br><br>
-                <a href=""><button style="font-size: 1.1em;">Fånga en konsertbiljett nu</button></a>
+                <a href="https://buy.stripe.com/9AQ5nq47Ycfzeyc3cd"><button style="font-size: 1.1em;">Fånga en
+                        konsertbiljett nu</button></a>
                 <br><br>
                 <p>Ta med din goda vän, var där tidigt, kom och häng med mig, Tove och Larry.</p>
                 <br><br>
