--- a/konsert/index.html
+++ b/konsert/index.html
@@ -223,7 +223,7 @@
                 <br><br>
                 <p>Tove Rhodiner har lovat att värma upp stämningen, och börjar 20 <i>prick</i>.</p>
                 <br><br>
-                <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge!</p>
+                <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge.</p>
                 <br><br>
                 <p>Larry’s Corner är som sagt ett <i>litet</i> ställe, och <strong>det finns bara 28
                         platser</strong>.
