--- a/konsert/index.html
+++ b/konsert/index.html
@@ -147,7 +147,9 @@
                 <br><br>
 
                 <p>Tidigare hade jag jobbat och turnerat som jazzpianist bla med den helt galna jazztrummis-legenden
-                    <a href="">Kresten Osgood</a> och den fantastiska sångerskan <a href="">Nana Rashid</a>, spelat
+                    <a href="https://youtu.be/UvDcOpG2RBg?si=h_VCbrriS8Yar8lH&t=38">Kresten Osgood</a> och den
+                    fantastiska sångerskan <a href="https://youtu.be/Ps9Nwv1Xstc?si=5FhoUiff9OVIDg8g">Nana Rashid</a>,
+                    spelat
                     runt
                     om i Skandinavien, Israel,
                     Palestina, Sydafrika och Nigeria. </strong>
