--- a/konsert/index.html
+++ b/konsert/index.html
@@ -148,7 +148,7 @@
 
                 <p>Tidigare hade jag jobbat och turnerat som jazzpianist bla med den helt galna jazztrummis-legenden
                     <a href="https://youtu.be/UvDcOpG2RBg?si=h_VCbrriS8Yar8lH&t=38">Kresten Osgood</a> och den
-                    fantastiska sångerskan <a href="https://youtu.be/Ps9Nwv1Xstc?si=5FhoUiff9OVIDg8g">Nana Rashid</a>,
+                    fantastiska sångerskan <a href="https://youtu.be/griqL81vTfc?si=51Sq_KwEjPgjNLuh">Nana Rashid</a>,
                     spelat
                     runt
                     om i Skandinavien, Israel,
