--- a/konsert/index.html
+++ b/konsert/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
@@ -28,18 +28,37 @@
 
 </head>
 
-<body style="margin: 0px;">
+<body style="margin: 0px; overflow: hidden;">
     <div class="pfstext">
         <div class="textbox">
+            <div style="white-space: nowrap;
+            width: 110vw;
+            overflow: hidden; margin-top: -35px; font-weight: 700; margin-left: -30px;">
+                <p>
+                    <strong style="background: rgb(243, 216, 183);">
+                        konsert konsert konsert konsert
+                        konsert konsert
+                        konsert konsert konsert konsert konsert konsert konsert
+                        konsert konsert konsert konsert konsert konsert konsert konsert konsert konsert konsert konsert
+                        konsert
+                        konsert konsert konsert konsert konsert konsert konsert konsert konsert konsert konsert konsert
+                        konsert
+                        konsert konsert konsert konsert
+                    </strong>
+                </p>
+            </div>
             <div>
-                <br>
+                <br><br><br>
                 <p><strong style="font-size: 1.6em; line-height: 1.4em; background: rgb(255, 154, 205);">Tja, vad gör du
                         på
                         fredag?!</strong></p>
                 <br>
-                <br> <br>
+                <br>
 
-
+                <p style="line-height: 0.4em; font-size: 0.6em; display: none;"><strong
+                        style="background: rgb(214, 222, 255);">(kanske
+                        konsert?)</strong></p>
+                <br>
                 <p>
                     Bakom dessa bakdelar:</p>
                 <br><br>
@@ -60,8 +79,6 @@
                 <br><br>
                 <p>Hörnet som huserar Stockholms mest udda prylar, filmer och konserter.</p>
                 <br><br>
-                <p>Hörnet där det känns som att vad som helst är möjligt.</p>
-                <br><br>
                 <p>Hörnet där <i>konserten jag ska spela på fredag</i> äger rum!</p>
                 <br><br>
             </div>
@@ -80,7 +97,7 @@
                 </p>
                 <br><br>
                 <p>
-                    (med James Bond-röst…) Petter <i>Rylén</i> 😎😎😎:
+                    Petter <i>Rylén</i> 😎😎😎
                 </p>
                 <br><br>
                 <img src="/images/crocpetter.webp" style="width: 100%;">
@@ -223,7 +240,8 @@
                 <p><strong style="background: rgb(195, 195, 255);">Fredag 10:e kl 19.30 öppnar dörrarna.</strong>
                 </p>
                 <br><br>
-                <p>Tove Rhodiner har lovat att värma upp stämningen, och börjar 20 <i>prick</i>.</p>
+                <p>Tove Rhodiner, med hjälp av Björn Lindberg (bl.a bassist till Alice Boman) har lovat att värma upp
+                    stämningen, de börjar 20 <i>prick</i>.</p>
                 <br><br>
                 <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge.</p>
                 <br><br>
@@ -232,17 +250,17 @@
                 </p>
                 <br><br>
                 <p>
-                    Du kan förköpa dina biljetter här och nu för endast <s>120 kr</s> <strong
-                        style="background: rgb(175, 255, 172);">80 kr</strong> (du sparar 40 kr och ser
+                    Entrébiljett i dörren kostar 120 kr, men du kan förköpa dina biljetter <i>här och nu</i> för endast
+                    <strong style="background: rgb(175, 255, 172);">80&nbsp;kr</strong> (du sparar 40 kr och ser
                     till att
                     få
                     plats).
                 </p>
                 <br><br>
-                <a href="https://buy.stripe.com/9AQ5nq47Ycfzeyc3cd"><button style="font-size: 1.1em;">Fånga en
+                <a href="https://buy.stripe.com/9AQ5nq47Ycfzeyc3cd?locale=sv"><button style="font-size: 1.1em;">Fånga en
                         konsertbiljett nu</button></a>
                 <br><br>
-                <p>Ta med din goda vän, var där tidigt, kom och häng med mig, Tove och Larry.</p>
+                <p>Ta med din goda vän, var där tidigt, kom och häng med mig, Tove, Björn och Larry.</p>
                 <br><br>
                 <p>Vem vet, kanske jag till och med bakar kladdkaka?!</p>
                 <br><br>
