--- a/konsert/index.html
+++ b/konsert/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petter Rylén – Konsert</title>
+    <title>Konsert – Petter Rylén</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
@@ -240,7 +240,7 @@
                 <p><strong style="background: rgb(195, 195, 255);">Fredag 10:e kl 19.30 öppnar dörrarna.</strong>
                 </p>
                 <br><br>
-                <p>Tove Rhodiner, med hjälp av Björn Lindberg (bl.a bassist till Alice Boman) har lovat att värma upp
+                <p>Tove Rhodiner, med hjälp av Björn Lindberg (bl. a. bassist till Alice Boman) har lovat att värma upp
                     stämningen, de börjar 20 <i>prick</i>.</p>
                 <br><br>
                 <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge.</p>
