--- a/konsert/index.html
+++ b/konsert/index.html
@@ -313,7 +313,7 @@
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    event_name: 'EngagedVisitor',
+                    event_name: 'View content',
                     event_time: Math.floor(Date.now() / 1000),
                     user_data: {
                         client_user_agent: navigator.userAgent,
