--- a/konsert/index.html
+++ b/konsert/index.html
@@ -280,7 +280,7 @@
                     plats).
                 </p>
                 <br><br>
-                <a href="https://buy.stripe.com/9AQ5nq47Ycfzeyc3cd?locale=sv"><button style="font-size: 1.1em;">Fånga en
+                <a href="https://forms.gle/ztkNkRyQfRppUbio6"><button style="font-size: 1.1em;">Fånga en
                         konsertbiljett nu</button></a>
                 <br><br>
                 <p>Ta med din goda vän, var där tidigt, kom och häng med mig, Tove, Björn och Larry.</p>
