--- a/konsert/index.html
+++ b/konsert/index.html
@@ -269,15 +269,16 @@
                 <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge.</p>
                 <br><br>
                 <p>Larry’s Corner är som sagt ett <i>litet</i> ställe, och <strong>det finns bara 28
-                        platser</strong>.
+                        platser, varav 17 sittplatser <strong style="background: rgb(255, 154, 205);">(endast 5 kvar
+                            just nu!)</strong></strong>.
                 </p>
                 <br><br>
                 <p>
                     Entrébiljett i dörren kostar 120 kr, men du kan förköpa dina biljetter <i>här och nu</i> för endast
                     <strong style="background: rgb(175, 255, 172);">80&nbsp;kr</strong> (du sparar 40 kr och ser
                     till att
-                    få
-                    plats).
+                    reservera
+                    en sittplats).
                 </p>
                 <br><br>
                 <a href="https://forms.gle/ztkNkRyQfRppUbio6"><button style="font-size: 1.1em;">Fånga en
