--- a/konsert/index.html
+++ b/konsert/index.html
@@ -269,7 +269,8 @@
                 <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge.</p>
                 <br><br>
                 <p>Larry’s Corner är som sagt ett <i>litet</i> ställe, och <strong>det finns bara 28
-                        platser, varav 17 sittplatser <strong style="background: rgb(255, 154, 205);">(endast 5 kvar
+                        platser, varav 17 sittplatser <strong style="background: rgb(255, 154, 205);">(endast 2
+                            sittplatser kvar
                             just nu!)</strong></strong>.
                 </p>
                 <br><br>
