--- a/konsert/index.html
+++ b/konsert/index.html
@@ -269,25 +269,30 @@
                 <p>Missa henne inte, hon är den mest originella människa jag har träffat på länge.</p>
                 <br><br>
                 <p>Larry’s Corner är som sagt ett <i>litet</i> ställe, och <strong>det finns bara 28
-                        platser, varav 17 sittplatser <strong style="background: rgb(255, 154, 205);">(endast 2
-                            sittplatser kvar
-                            just nu!)</strong></strong>.
+                        platser, <s>varav 17 sittplatser</s> <strong style="background: rgb(255, 154, 205);">(endast 9
+                            ståplatser kvar nu!)</strong></strong>.
                 </p>
                 <br><br>
                 <p>
                     Entrébiljett i dörren kostar 120 kr, men du kan förköpa dina biljetter <i>här och nu</i> för endast
                     <strong style="background: rgb(175, 255, 172);">80&nbsp;kr</strong> (du sparar 40 kr och ser
                     till att
-                    reservera
-                    en sittplats).
+                    få en plats).
                 </p>
+                <br><br>
+                <p>Obs: Endast fåtal ståplatser kvar – det blir supermysigt!</p>
                 <br><br>
                 <a href="https://forms.gle/ztkNkRyQfRppUbio6"><button style="font-size: 1.1em;">Fånga en
                         konsertbiljett nu</button></a>
                 <br><br>
+
                 <p>Ta med din goda vän, var där tidigt, kom och häng med mig, Tove, Björn och Larry.</p>
                 <br><br>
                 <p>Vem vet, kanske jag till och med bakar kladdkaka?!</p>
+                <br><br>
+                <p>Om du inte kan denna gången kan du <a data-formkit-toggle="97c0338f49"
+                        href="https://piano-petter.kit.com/97c0338f49">klicka här för att bli underrättad</a> när jag
+                    spelar nästa gång.</p>
                 <br><br>
                 <p>
                     <3 </p>
@@ -303,10 +308,6 @@
                         <p>079 340 34 78</p>
 
             </div>
-
-
-
-
 
 
         </div>
