--- a/konsert/index.html
+++ b/konsert/index.html
@@ -290,9 +290,12 @@
                 <br><br>
                 <p>Vem vet, kanske jag till och med bakar kladdkaka?!</p>
                 <br><br>
-                <p>Om du inte kan denna gången kan du <a data-formkit-toggle="97c0338f49"
-                        href="https://piano-petter.kit.com/97c0338f49">klicka här för att bli underrättad</a> när jag
-                    spelar nästa gång.</p>
+                <p><strong style="background: rgb(255, 250, 189);">
+                        Om du inte kan denna gången kan du <a href="https://piano-petter.kit.com/943bfbbe51">klicka här
+                            för
+                            att bli underrättad</a> när jag
+                        spelar nästa gång.
+                    </strong></p>
                 <br><br>
                 <p>
                     <3 </p>
