--- a/konsert/vienna.html
+++ b/konsert/vienna.html
@@ -281,9 +281,8 @@
                     You can reserve your spot by filling out this short form:
                 </p>
                 <br><br>
-                <a href="https://forms.gle/ztkNkRyQfRppUbio6"><button style="font-size: 1.1em;">Reserve your
-                        spot
-                        now</button></a>
+                <a href="https://forms.gle/ztkNkRyQfRppUbio6"><button style="font-size: 1.1em;">I wanna come
+                        listen</button></a>
                 <br><br>
 
                 <p>I can't wait to play for you!</p>
