--- a/konsert/vienna.html
+++ b/konsert/vienna.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konsert Wien – Petter Rylén</title>
+    <title>Concert Vienna – Petter Rylén</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
@@ -297,6 +297,8 @@
                         <p><a href="mailto:petter.rylen@gmail.com">petter.rylen@gmail.com</a></p>
                         <br>
                         <p>079 340 34 78</p>
+                        <br><br>
+                        <img src="/images/serious.webp" style="width: 100%;">
                         <br><br>
                         <p><strong style="background: rgb(255, 250, 189);">
                                 PS. If you can't make it on the 15th, but wanna keep in the loop for the next time I'm
