--- a/konsert/vienna.html
+++ b/konsert/vienna.html
@@ -292,7 +292,7 @@
                     You can reserve your spot by filling out this short form:
                 </p>
                 <br><br>
-                <a href="https://forms.gle/ztkNkRyQfRppUbio6"><button style="font-size: 1.1em;">I wanna come
+                <a href="https://forms.gle/4yxcm41nV3AdMvSN6"><button style="font-size: 1.1em;">I wanna come
                         listen</button></a>
                 <br><br>
 
