--- a/ep/index.html
+++ b/ep/index.html
@@ -18,6 +18,7 @@
         body {
             font-family: 'arial', Tahoma, Geneva, Verdana, sans-serif;
             background-image: url('/images/anslag.webp');
+            background-size: cover;
             min-height: 100vh;
             display: flex;
             align-items: center;
