--- a/ep/index.html
+++ b/ep/index.html
@@ -228,7 +228,7 @@
             { name: "Ventilationstrumma", file: "Ventilationstrumma.mp3" },
             { name: "Heal", file: "Heal.mp3" },
             { name: "Tuberkolosen", file: "Tuberkolosen.mp3" },
-            { name: "Låsa in mig", file: "Låsainmig.mp3" },
+            { name: "Låsa in mig", file: "Lasainmig.mp3" },
             { name: "Home to my babies", file: "Hometomybabies.mp3" }
         ];
 
