--- a/ventilationstrumma/index.html
+++ b/ventilationstrumma/index.html
@@ -189,7 +189,7 @@
     <div class="container">
         <div class="video-section">
             <div class="video-wrapper">
-                <video id="video" controls>
+                <video id="video" controls playsinline>
                     <source src="ventilationstrumma.mp4" type="video/mp4">
                 </video>
             </div>
