--- a/ep/index.html
+++ b/ep/index.html
@@ -225,11 +225,11 @@
         // 🎵 ADD YOUR AUDIO FILES HERE 🎵
         // Replace these with your actual audio file names
         const tracks = [
-            { name: "Ventilationstrumma", file: "Ventilationstrumma.mp3" },
-            { name: "Heal", file: "Heal.mp3" },
-            { name: "Tuberkolosen", file: "Tuberkolosen.mp3" },
-            { name: "Låsa in mig", file: "Lasainmig.mp3" },
-            { name: "Home to my babies", file: "Hometomybabies.mp3" }
+            { name: "Ventilationstrumma", file: "Ventilationstrumma.wav" },
+            { name: "Heal", file: "Heal.wav" },
+            { name: "Tuberkolosen", file: "Tuberkolosen.wav" },
+            { name: "Låsa in mig", file: "Lasainmig.wav" },
+            { name: "Home to my babies", file: "Hometomybabies.wav" }
         ];
 
         // Player elements
