--- a/ep/index.html
+++ b/ep/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Tuberkolosen</title>
+    <title>Tuberkulosen</title>
     <style>
         * {
             margin: 0;
@@ -193,7 +193,7 @@
 <body>
     <div class="music-player">
         <div class="player-header">
-            <h1 class="ep-title"> <i>Tuberkolosen</i></h1>
+            <h1 class="ep-title"> <i>Tuberkulosen</i></h1>
         </div>
 
         <audio id="audioPlayer" class="audio-controls"></audio>
@@ -227,7 +227,7 @@
         const tracks = [
             { name: "Ventilationstrumma", file: "Ventilationstrumma.mp3" },
             { name: "Heal", file: "Heal.mp3" },
-            { name: "Tuberkolosen", file: "Tuberkolosen.mp3" },
+            { name: "Tuberkulosen", file: "Tuberkulosen.mp3" },
             { name: "Låsa in mig", file: "Lasainmig.mp3" },
             { name: "Home to my babies", file: "Hometomybabies.mp3" }
         ];
